sinex parsing ok

--- a/cpp/bin/Makefile.am
+++ b/cpp/bin/Makefile.am
@@ -14,10 +14,11 @@ itrftool_CXXFLAGS = \
 	-Wdisabled-optimization \
 	-DDEBUG \
 	-Wno-error=inline \
-	-I$(top_srcdir)/src \
-	-L$(top_srcdir)/src
+	-I$(top_srcdir)/src
 
 itrftool_SOURCES = \
 	itrf_tool.cpp
 
-AM_LDFLAGS = -lggdatetime -lggeodesy -litrfcpp
+AM_LDFLAGS = -lsinex -lggdatetime -lggeodesy
+
+itrftool_LDADD = $(top_srcdir)/src/libitrfcpp.la $(AM_LIBS)
